@@ -1,3 +1,8 @@
+2002-02-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* pj_transform.c: Provide zerod Z array in pj_datum_transform() if
+	none passed in.
+
 2002-01-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added proj.spec file provided by Intevation (FreeGIS CD).
